hphp/hack/test/typecheck/switch/non_terminal_default.php.exp
File "non_terminal_default.php", line 6, characters 5-12:
Default case in `switch` must be terminal (Parsing[1002])
